--- a/public/styles.css
+++ b/public/styles.css
@@ -6,6 +6,82 @@
 .userimg{
     width: 40px;
     height: 40px;
-    background-color: gray;
+    background-color: white;
     border-radius: 30px;
+}
+
+/*Formatação geral*/
+button{
+    background: none;
+    border: none;
+}
+
+header{
+    height: 150px;
+    padding: 1rem;
+   
+}
+
+
+/*Search-bar*/
+.search-bar{
+    display: flex;
+    height: 2.5rem;
+    padding: 0.7rem;
+    border-radius: 2rem;
+    background-color: white;
+    position: relative;
+}
+
+.btfilter{
+    height: 100%;
+    width: 100%;
+}
+.search-input{
+    border: none;
+    outline: none;
+    width: 30rem;
+    
+}
+
+.btfilter, .btsearch{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
+}
+
+.dropdown{
+    position: absolute;
+    background-color: black;
+    color: white;
+    border: purple 3px solid;
+    width: 50%;
+}
+.dropdown ul{
+    padding: 1rem;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.dropdown ul li{
+    list-style: none;
+}
+
+
+/*Formatação user-info*/
+.user-info button{
+    background-color: black;
+    color: white;
+    padding: 0.3rem 0.5rem;
+    border-radius: 1rem;
+}
+#username{
+    color: white;
+    font-weight: bolder;
+    font-size: 120%;
+    padding: 0.5rem;
 }
