--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 /*Formatação das imgs*/
 .logo {
-    width: 300px;
-    height: 100px;
+    width: 15vw;
+    height: 5vw;
 }
 .userimg{
     width: 40px;
@@ -20,6 +20,12 @@ header{
     height: 150px;
     padding: 1rem;
    
+}
+body{
+    background: linear-gradient(to left, black, rgb(39, 0, 39));
+    background-repeat: no-repeat;
+    max-width: 100vw;
+    min-height: 100vh;
 }
 
 
@@ -85,3 +91,58 @@ header{
     font-size: 120%;
     padding: 0.5rem;
 }
+
+/*formatação destaques*/
+
+.destaques > div{
+   height: 100%;
+}
+
+.destaques, .carousel-img-div{
+    height: 80vh;
+}
+@media screen and (min-width:768px) {
+    .custom-img-carousel{
+        width: 50% !important; /*fiz isso pq a classe inutil do bootstrap w-md-50 simplesmente n funciona de tão ruim q essa merda é, qnd to obviamente acima de 768px vou no inspecionar e a desgraça n ta ta aplicada, ent fds vai assim msm, bootstrap é uma merda*/
+        height: 100%;
+        position: relative;
+        left: 50%;
+        z-index: 1;
+    }
+    .carousel-img-div{
+        
+        width: 100%;
+
+    }
+    .degrade{
+        position: absolute;
+        background: linear-gradient(to right, rgb(22, 0, 22) 45%, rgba(255, 255, 255, 0) 100%);
+        bottom: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 4;
+        
+    }
+    .custom-caption, .carousel-indicators, .carousel-control-prev, .carousel-control-next{
+        z-index: 5;
+    }
+
+    .custom-caption{
+        position: absolute;
+        left: calc(25vw - (400px/2));
+        top: calc(50% - 65px);
+        
+        width: 400px;
+    }
+    .custom-caption h5{
+        font-size: 300%;
+    }
+
+    
+    
+
+    
+    
+    
+}
+
