--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,10 @@
 /*Formatação das imgs*/
 .logo {
-    width: 15vw;
-    height: 5vw;
+    width: 10vw;
+    height: 3.3vw;
+}
+.logo-pequena{
+    display: none;
 }
 .userimg{
     width: 40px;
@@ -17,7 +20,7 @@ button{
 }
 
 header{
-    height: 150px;
+    height: 100px;
     padding: 1rem;
    
 }
@@ -46,7 +49,7 @@ body{
 .search-input{
     border: none;
     outline: none;
-    width: 30rem;
+    width: 30vw;
     
 }
 
@@ -78,6 +81,23 @@ body{
     list-style: none;
 }
 
+@media screen and (max-width:768px){
+    .logo{
+        display: none;
+    }
+    .logo-pequena{
+        display: inline;
+        height:10vw;
+        width: 10vw;
+    }
+    #username{
+        display: none;
+    }
+    .search-input{
+        width: 45vw;
+    }
+} 
+
 
 /*Formatação user-info*/
 .user-info button{
@@ -91,6 +111,10 @@ body{
     font-weight: bolder;
     font-size: 120%;
     padding: 0.5rem;
+}
+
+.user-info{
+    margin-top: .5rem;
 }
 
 /*formatação destaques*/
@@ -180,6 +204,10 @@ body{
     cursor: pointer;
 }
 
+.filmes .botoes{
+    display: none;
+}
+
 @media screen and (min-width:768px) {
     .filme{
         height: 50vw;
@@ -196,8 +224,10 @@ body{
     }
 
     
-
-    .botoes ul{
+    .filmes .botoes{
+        display: block;
+    }
+    .filmes .botoes ul{
         padding: 0;
         margin: 0;
         list-style: none;
@@ -213,13 +243,13 @@ body{
         left: 0;
         bottom: 0;
     }
-    .botoes ul li a{
+    .filmes .botoes ul li a{
         color: purple;
     }
-    .botoes ul li a i{
+    .filmes .botoes ul li a i{
         font-size: 150%;
     }
-    .botoes ul li:first-of-type a i{
+    .filmes .botoes ul li:first-of-type a i{
         font-size: 240%;
 
     }
