feat: carouuselpara tela grande, scroll para pequenas(Ainda n tem animação, mas dps eu faço pq já gastei tempo demais nessa desgraça e vou dar prioridade a terminar o trabalho)

--- a/public/styles.css
+++ b/public/styles.css
@@ -286,7 +286,7 @@ body{
 
 @media screen and (min-width:768px){
     .filmes .row{
-        /*overflow: hidden;*/
+        overflow: hidden;
     }
     .bts-custom-carousel{
         display: inline-block;
@@ -300,4 +300,5 @@ body{
     .next{
         right: 0;
     }
+    
 }
