--- a/public/detalhes.css
+++ b/public/detalhes.css
@@ -1,3 +1,9 @@
+/*cor daletra geral*/
+main{
+    color: white;
+}
+
+
 /*formatação da img principal*/
 .imgPrinciapal > img{
     max-width: 100vw;
@@ -47,4 +53,20 @@
     width: 100%;
     height: 100%;
     border: 0;
+}
+
+/*Formatação dos cards*/
+
+.epsOuFotosDoItem .card{
+    flex: 1 1 18rem;
+    margin: 1.5%;
+}
+.epsOuFotosDoItem{
+    padding: .8rem;
+}
+
+@media screen and (min-width:1335px){
+    .epsOuFotosDoItem .card{
+        flex: 0 1 18rem;
+    }
 }
