--- a/public/styles.css
+++ b/public/styles.css
@@ -116,6 +116,9 @@ body{
     font-size: 120%;
     padding: 0.5rem;
 }
+.userimg:hover{
+    cursor: pointer;
+}
 
 .user-info{
     margin-top: .5rem;
@@ -129,6 +132,9 @@ body{
 
 .destaques, .carousel-img-div{
     height: 80vh;
+}
+.carousel-img-div img{
+    cursor: pointer;
 }
 @media screen and (min-width:768px) {
     .custom-img-carousel{
@@ -165,6 +171,10 @@ body{
     }
     .custom-caption h5{
         font-size: 300%;
+    }
+
+    .custom-caption h5:hover, .custom-caption p:hover{
+        cursor:pointer;
     }
 
     
