--- a/public/detalhes.css
+++ b/public/detalhes.css
@@ -70,3 +70,17 @@ main{
         flex: 0 1 18rem;
     }
 }
+
+/*formatação categorias*/
+
+.categoria{
+    flex-wrap: wrap;
+}
+.categoria *{
+    padding: 0;
+    margin:0;
+    padding-right: 0.5rem;
+}
+.categoria{
+    margin-bottom: 0.5rem;
+}
