--- a/public/styles.css
+++ b/public/styles.css
@@ -195,14 +195,18 @@ body{
 .filme{
     position: relative;
     height: 75vw;
+    padding: 0 .75rem;
+    
 }
 
 .filmes .divImg{
     position: absolute;
     bottom: 0;
+    left:0;
     max-width: 100%;
     height: 100%;
     z-index: 1;
+    padding: 0 .75rem;
 }
 
 .filmes .row{
@@ -211,7 +215,7 @@ body{
 }
 
 .filmes .divImg img{
-    width: 95%;
+    width: 100%;  /*95%*/
     height: 100%;
 }
 .filme:hover{
